// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


/*
  ユーザーテーブル
*/
Table t_users {
  id integer [primary key]
  username varchar(30) [unique]
  email varchar(255) [unique]
  password varchar(60)
  display_name varchar(20)
  icon_image_url varchar(255)
  introduction varchar(200)
  town_name varchar(30)
  coin_count integer
  created_at timestamp
}


/*
  建物
  (ユーザーに対して多対多)
*/
// ユーザーと建物の中間テーブル
Table t_users_buildings {
  id integer [primary key]
  user_id integer [not null, ref: > t_users.id]
  building_id integer [not null, ref: > t_buildings.id]
  place_index integer
}

Table t_buildings {
  id integer [primary key]
  exterior_image_url varchar(255)
  interior_image_url varchar(255)
  default_name varchar(30)
  custom_name varchar(30)
  required_coin_count integer
  is_in_store bool
  sale_start_time timestamp
  sale_end_time timestamp
}


/*
  フレンド
  (ユーザー同士が多対多)
*/
Table t_friendships {
  id integer [primary key]
  requester_id integer [not null, ref: > t_users.id]
  receiver_id integer [not null, ref: > t_users.id]
  is_pending bool
}


/*
  作業内容
*/
Table t_works {
  id integer [primary key]
  user_id integer [not null, ref: > t_users.id]
  work_name varchar(60) [not null]
  icon_image_url varchar(255)
}


/*
  作業ログ
*/
Table t_work_logs {
  id integer [primary key]
  user_id integer [not null, ref: > t_users.id]
  work_id integer [not null, ref: > t_works.id]
  start_at timestamp [not null]
  minutes bigint [not null]
}

